# indicator-sound

./: AUTHORS  CMakeLists.txt  config.h.in
cmake/: UseVala.cmake
data/: CMakeLists.txt  com.canonical.indicator.sound  com.canonical.indicator.sound.gschema.xml  indicator-sound.conf.in  indicator-sound.desktop.in  indicator-sound.service.in  indicator-sound.upstart.desktop.in
debian/: changelog  control  rules
include/unity/: CMakeLists.txt
include/unity/gmenuharness/: MatchResult.h  MatchUtils.h  MenuItemMatcher.h  MenuMatcher.h
po/: POTFILES.in
src/: CMakeLists.txt  accounts-service-access.vala  accounts-service-privacy-settings.vala  accounts-service-system-sound-settings.vala  accounts-service-user.vala  bus-watch-namespace.c  info-notification.vala  main.c  main.vala  media-player-list.vala  media-player-mpris.vala  media-player-user.vala  media-player.vala  mpris2-interfaces.vala  notification.vala  options-gsettings.vala  options.vala  service.vala  sound-menu.vala  volume-control-pulse.vala  volume-control.vala  volume-warning-pulse.vala  volume-warning.vala  warn-notification.vala
src/gmenuharness/: CMakeLists.txt  MatchResult.cpp  MatchUtils.cpp  MenuItemMatcher.cpp  MenuMatcher.cpp
tests/: CMakeLists.txt  accounts-service-mock.h  accounts-service-user.cc  gtest-gvariant.h  indicator-fixture.h  indicator-test.cc  manual  media-player-list-mock.vala  media-player-mock.vala  media-player-user.cc  notifications-mock.h  notifications-test.cc  options-mock.vala  pa-mock.cpp  sound-menu.cc  volume-control-mock.vala  volume-control-test.cc  volume-warning-mock.vala
tests/dbus-types/: CMakeLists.txt  com.ubuntu.AccountsService.Sound.xml  dbus-action-result.cpp  dbus-action-result.h  dbus-types.h  org.PulseAudio.Ext.StreamRestore1.xml  org.freedesktop.Accounts.xml  org.freedesktop.DBus.Properties.xml  org.gtk.Actions.xml  pulseaudio-volume.cpp  pulseaudio-volume.h
tests/integration/: CMakeLists.txt  indicator-sound-test-base.cpp  indicator-sound-test-base.h  main.cpp  test-indicator.cpp
tests/integration/utils/: dbus-pulse-volume.cpp  dbus-pulse-volume.h  get-volume.cpp  set-volume.cpp
tests/service-mocks/: CMakeLists.txt  DBusPropertiesNotifier.cpp  DBusPropertiesNotifier.h
tests/service-mocks/accounts-mock/: AccountsDefs.h  AccountsMock.cpp  AccountsMock.h  AccountsServiceSoundMock.cpp  AccountsServiceSoundMock.h  CMakeLists.txt  com.ubuntu.AccountsService.Sound.Mock.xml  main.cpp  org.freedesktop.Accounts.Mock.xml
tests/service-mocks/media-player-mpris-mock/: CMakeLists.txt  MediaPlayerMprisDefs.h  MediaPlayerMprisMock.cpp  MediaPlayerMprisMock.h  main.cpp  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml  player-update.cpp
tests/service-mocks/media-player-mpris-mock/applications/: testplayer1.desktop  testplayer2.desktop  testplayer3.desktop
vapi/: bus-watcher.vapi
